<resources>
    <string name="app_name">Marvel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="close_app">Please click BACK again to exit</string>
    <string name="check_internet">Check your Internet Connection</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>
    <string name="related_links">Related Links</string>
    <string name="events">Events</string>
    <string name="stories">Stories</string>
    <string name="series">Series</string>
    <string name="comiclink">Comiclink</string>
    <string name="wiki">Wiki</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search...</string>
</resources>
